--- a/src/main/resources/baseline/InventoryApplicationManagement.fxml
+++ b/src/main/resources/baseline/InventoryApplicationManagement.fxml
@@ -13,28 +13,27 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.InventoryManagementApplicationController">
    <children>
       <MenuBar>
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Save" />
-                  <MenuItem mnemonicParsing="false" text="Load" />
+              <MenuItem mnemonicParsing="false" onAction="#menuSave" text="Save" />
+                  <MenuItem mnemonicParsing="false" onAction="#menuLoad" text="Load" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Close" />
+                  <MenuItem mnemonicParsing="false" onAction="#menuClose" text="Close" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete Item" />
-                  <MenuItem mnemonicParsing="false" text="Delete All Items" />
+              <MenuItem mnemonicParsing="false" onAction="#menuDelete" text="Delete Item" />
+                  <MenuItem mnemonicParsing="false" onAction="#menuDeleteAll" text="Delete All Items" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="Guide" />
+              <MenuItem mnemonicParsing="false" onAction="#menuOpenGuide" text="Guide" />
             </items>
           </Menu>
         </menus>
