--- a/src/main/resources/baseline/InventoryApplicationManagement.fxml
+++ b/src/main/resources/baseline/InventoryApplicationManagement.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -35,6 +36,16 @@
                   <MenuItem mnemonicParsing="false" onAction="#menuDeleteAll" text="Delete All Items" />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="View">
+              <items>
+                  <Menu mnemonicParsing="false" text="Search by">
+                     <items>
+                        <CheckMenuItem fx:id="nameCheckMenu" mnemonicParsing="false" onAction="#setSearchByName" text="Name" />
+                        <CheckMenuItem fx:id="serialNumberCheckMenu" mnemonicParsing="false" onAction="#setSearchBySerialNumber" text="Serial Number" />
+                     </items>
+                  </Menu>
+              </items>
+            </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#menuOpenGuide" text="Guide" />
@@ -44,7 +55,7 @@
       </MenuBar>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <TableView fx:id="itemsTable" layoutX="60.0" layoutY="50.0" prefHeight="240.0" prefWidth="480.0">
+            <TableView fx:id="itemsTable" editable="true" layoutX="60.0" layoutY="50.0" prefHeight="240.0" prefWidth="480.0">
               <columns>
                 <TableColumn fx:id="nameColumn" maxWidth="500.0" minWidth="100.0" prefWidth="160.0" text="Name" />
                 <TableColumn fx:id="valueColumn" maxWidth="500.0" minWidth="100.0" prefWidth="160.0" text="Value($)" />
@@ -59,7 +70,7 @@
             <TextField fx:id="nameTextField" layoutX="31.0" layoutY="320.0" promptText="Enter a name" AnchorPane.leftAnchor="25.0" />
             <TextField fx:id="valueTextField" layoutX="174.0" layoutY="320.0" promptText="Enter a positive value ($)" />
             <TextField fx:id="serialNumberTextField" layoutX="323.0" layoutY="320.0" promptText="A-XXX-XXX-XXX" />
-            <Button fx:id="addItemButton" layoutX="488.0" layoutY="315.0" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="93.0" mnemonicParsing="false" onAction="#addItem" prefHeight="32.0" prefWidth="93.0" text="Add Item" AnchorPane.rightAnchor="15.0">
+            <Button layoutX="488.0" layoutY="315.0" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="93.0" mnemonicParsing="false" onAction="#addItem" prefHeight="32.0" prefWidth="93.0" text="Add Item" AnchorPane.rightAnchor="15.0">
                <font>
                   <Font name="Times New Roman" size="18.0" />
                </font>
